made changes to the code

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
-    <title>Simple Interest Calculator</title>
+    <title>Web App – Simple Interest Calculator</title>
 </head>
 
 <body>
@@ -35,7 +35,7 @@
 
         <footer>
 
-            &#169; This Calculator belongs to Anjal
+            &#169; Everyone Can Get Rich 
 
 
         </footer>
